test-deployment.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: mynginx
spec:
  replicas: 2
  selector:
    matchLabels:
      run: mynginx
  template:
    metadata:
      labels:
        run: mynginx
    spec:
      containers:
      - image: nginx:1.22.1
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "50m"
        name: mynginx
        ports:
        - containerPort: 80
  strategy:
    canary:
      canaryService: mynginx-preview
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
