test-rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: mynginx
spec:
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause:
          duration: "1m"
      - setWeight: 50
      - pause:
          duration: "2m"
      canaryService: mynginx-preview
      stableService: mynginx
      trafficRouting:
        istio:
          virtualService: 
            name: mynginx
            routes:
            - primary 
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      run: mynginx
  template:
    metadata:
      labels:
        run: mynginx
    spec:
      containers:
      - image: nginx:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "50m"
        name: mynginx
        ports:
        - containerPort: 80
