test-svc-preview.yml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-preview
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: mynginx
