test-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mynginx
  nemaspace: mynginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: mynginx
