test-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mynginx
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway # book 네임 스페이스 밑에 있는 book-gateway를 사용
  http:    
  - name: primary    
    route:
      - destination:
          host: mynginx
          port:
            number: 80
        weight: 100
      - destination:
          host: mynginx-preview
          port:
            number: 80
        weight: 0
